# Audetic

./: .gitignore  .mcp.json  .shellcheckrc  AGENTS.md  Cargo.toml  Cross.toml  Makefile  README.md  audetic.service  biome.json  example_config.toml  package.json
.beads/: issues.jsonl
.claude/skills/audetic-feature-planning/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: codex-review.yml  rust.yml
.planning/: auto-update.md  install-and-auto-update.md  keybindings-manager.md  macos-port.md  macos-system-audio.md  restart-command.md  uninstall-cli.md
apps/menubar-macos/: Package.resolved  Package.swift  README.md
apps/menubar-macos/Sources/AudeticMenuBar/: AppState.swift  AudeticMenuBarApp.swift  AudeticStatus.swift  DaemonClient.swift  MenuContent.swift  SettingsView.swift  ShortcutNames.swift  StatusPoller.swift
apps/menubar-macos/macos/: Info.plist
apps/ui/: .gitignore  electron-builder.yml  electron.vite.config.ts  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.web.json
apps/ui/resources/: audetic.service.tmpl
apps/ui/scripts/: build-daemon.ts
apps/ui/src/main/: assets.d.ts  auto-update.ts  index.ts  onboarding.ts  tray.ts
apps/ui/src/preload/: index.d.ts  index.ts
apps/ui/src/renderer/: index.html
apps/web-ui/: NOTES.md  eslint.config.js  feedback_mobx.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/web-ui/eslint-rules/: observer-boundary.js  observer-boundary.test.js
apps/web-ui/src/: App.tsx  index.css  router.tsx
apps/web-ui/src/api/: client.ts  post-processing.ts  schema.ts
apps/web-ui/src/components/: active-meeting-banner.tsx  command-bar.tsx  (+6 more)
crates/audetic/: Cargo.toml  build.rs
crates/audetic-cli/: Cargo.toml
crates/audetic-cli/src/: args.rs  client.rs  history.rs  keybind.rs  logs.rs  main.rs  meeting.rs  models.rs  post_processing.rs  provider.rs  transcribe.rs  update.rs
crates/audetic-core/: Cargo.toml
crates/audetic-core/src/: clipboard.rs  compression.rs  config.rs  ffmpeg.rs  jobs_client.rs  lib.rs  local_models.rs  url.rs
crates/audetic/examples/: system_audio_smoke.rs
crates/audetic/macos/: Info.plist  audetic.entitlements
crates/audetic/src/: lib.rs  main.rs
crates/audetic/src/agents/: mod.rs
crates/audetic/src/api/: docs.rs  mod.rs  static_assets.rs  url.rs
crates/audetic/src/api/routes/: agents.rs  history.rs  keybind.rs  logs.rs  meeting_artifacts.rs  meetings.rs  mod.rs  models.rs  post_processing.rs  provider.rs  recording.rs  summary_templates.rs  system.rs  transcribe.rs  update.rs
crates/audetic/src/app/: mod.rs
crates/audetic/src/audio/: audio_mixer.rs  audio_stream_manager.rs  input_device.rs  mic_source.rs  mod.rs  recording_machine.rs  resample.rs  system_source.rs
crates/audetic/src/audio/system_source/: linux.rs  macos.rs  mod.rs  permissions.rs  stub.rs
crates/audetic/src/cli/: args.rs  compression.rs  install.rs  meeting.rs  mod.rs  post_processing.rs  transcribe.rs
crates/audetic/src/config/: mod.rs
crates/audetic/src/db/: agent_profiles.rs  init.rs  meeting_artifacts.rs  meetings.rs  mod.rs
crates/audetic/src/history/: mod.rs
crates/audetic/src/hotkey/: mod.rs
crates/audetic/src/install/: audetic.daemon.plist.tmpl  audetic.menubar.plist.tmpl  audetic.service.tmpl  linux.rs  macos.rs  mod.rs
crates/audetic/src/keybind/: backup.rs  macos.rs  mod.rs  parser.rs  writer.rs
crates/audetic/src/logs/: mod.rs
crates/audetic/src/meeting/: import.rs  media_inspector.rs  meeting_machine.rs  mod.rs  processing.rs  progress.rs  status.rs
crates/audetic/src/meeting_artifacts/: mod.rs
crates/audetic/src/normalizer/: mod.rs  transcription_normalizer.rs
crates/audetic/src/post_processing/: action.rs  event.rs  job.rs  mod.rs  repository.rs  runner.rs
crates/audetic/src/post_processing/executors/: command.rs  mod.rs
crates/audetic/src/summary_templates/: mod.rs
crates/audetic/src/system/: ffmpeg.rs  mod.rs
crates/audetic/src/text_io/: mod.rs
crates/audetic/src/transcription/: job_service.rs  mod.rs  models.rs  transcription_service.rs  windowing.rs
crates/audetic/src/transcription/providers/: local_engine.rs  mod.rs  openai_api.rs  openai_cli.rs  whisper_cpp.rs
crates/audetic/src/ui/: mod.rs
crates/audetic/src/update/: mod.rs
crates/audetic/tests/: meeting_integration.rs  transcribe_compression.rs
docs/: adding-providers.md  configuration.md  index.md  installation.md  macos-install.md  review_tasks.md  waybar-integration.md
docs/adding-providers/: 01-create-provider.md  02-register-provider.md  03-cli-wizard.md  04-update-docs.md  README.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
makefiles/: shell.mk
release/: install.sh
release/cli/: latest.sh  uninstall.sh
scripts/: install-arch.sh  install-shell-tools.sh  install.sh  uninstall.sh  update-audetic.sh
scripts/ci/: codex-prepare-output.ts  codex-resolve-pr.ts  codex-run.ts  require-env.ts
scripts/release/: deploy.sh  deploy.ts
src/: lib.rs  main.rs
src/api/: error.rs  mod.rs
src/api/routes/: keybind.rs  logs.rs  meetings.rs  mod.rs  recording.rs  update.rs
src/app/: mod.rs
src/audio/: audio_mixer.rs  audio_source.rs  mod.rs  recording_machine.rs  system_source.rs
src/cli/: args.rs  compression.rs  history.rs  jobs_client.rs  keybind.rs  logs.rs  meeting.rs  mod.rs  provider.rs  transcribe.rs  update.rs
src/config/: mod.rs
src/db/: init.rs  meetings.rs  mod.rs  operations.rs  schemas.rs  tests.rs
src/global/: mod.rs
src/history/: mod.rs
src/keybind/: discovery.rs  mod.rs  parser.rs  writer.rs
src/meeting/: meeting_machine.rs  mod.rs  post_meeting_hook.rs  status.rs
src/normalizer/: mod.rs  normalizer.rs  openai_whisper.rs  transcription_normalizer.rs  whisper_cpp.rs
src/text_io/: mod.rs
src/transcription/: job_service.rs  jobs_client.rs  mod.rs  transcription_service.rs
src/transcription/providers/: assembly_api.rs  audetic_api.rs  mod.rs  openai_api.rs  openai_cli.rs  whisper_cpp.rs
src/update/: mod.rs
tests/: meeting_integration.rs  transcribe_compression.rs  transcribe_integration.rs
(+102 files in other folders)
