[package]
name = "audetic"
version = "0.1.0"
edition = "2021"
authors = ["Mat Silva"]
description = "Voice To Text Application for Wayland/Hyprland"
license = "MIT"

[[bin]]
name = "audetic"
path = "src/main.rs"

[[bin]]
name = "test_api"
path = "src/bin/test_api.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }


# Audio recording
cpal = "0.15"
hound = "3.5"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and errors
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Clipboard
arboard = "3.3"

# CLI args
clap = { version = "4.4", features = ["derive"] }

# Path handling
dirs = "5.0"

# Process management
which = "6.0"

# Text processing
regex = "1.10"

# HTTP server
axum = "0.7"
tower = "0.4"

# HTTP client for OpenAI API
reqwest = { version = "0.11", features = ["json", "multipart"] }
