[package]
name = "audetic-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Standalone Audetic command-line client. Talks to the audeticd daemon over its local REST API; independent of the daemon's audio/UI stack."
license.workspace = true

[[bin]]
name = "audetic"
path = "src/main.rs"

[dependencies]
# Shared, daemon-independent building blocks (URLs, config, jobs client,
# ffmpeg/compression, clipboard). No `schema` feature → no utoipa here.
audetic-core = { path = "../audetic-core" }

# Async runtime + HTTP client for talking to the daemon and the jobs API.
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }

# CLI args + interactive prompts.
clap = { version = "4.4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# Serialization, errors, logging.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc helpers used by the ported commands.
indicatif = "0.17"
chrono = "0.4"
which = "6.0"
