[package]
name = "audetic"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "audeticd"
path = "src/main.rs"

[dependencies]
# Shared, daemon-independent building blocks (config, URLs, jobs client,
# ffmpeg, clipboard). `schema` adds the utoipa derives the API surface needs.
audetic-core = { path = "../audetic-core", features = ["schema"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Async trait support
async-trait = "0.1"

# Audio recording
cpal = "0.17"
hound = "3.5"

# Sample-rate conversion (macOS loopback delivers samples at the output
# device's native rate, typically 48 kHz; the VTT pipeline wants 16 kHz).
rubato = "0.16"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Encoding
base64 = "0.22.1"

# Logging and errors
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI args
clap = { version = "4.4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# Path handling
dirs = "5.0"

# Process management
which = "6.0"

# Text processing
regex = "1.10"

# HTTP server. `multipart` enables the file-upload extractor used by
# `POST /api/meetings/import`.
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# OpenAPI spec generation
utoipa = { version = "5.4", features = ["axum_extras"] }

# HTTP client for OpenAI API
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
semver = "1.0"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
walkdir = "2.5"
fs2 = "0.4"
rusqlite = "0.37.0"
chrono = "0.4"
uuid = { version = "1.18.1", features = ["v4"] }

# Progress indicators
indicatif = "0.17"

# Temp file handling
tempfile = "3"

# Bundled FFmpeg installer — downloads platform-specific static builds
# (BtbN for Linux/Windows, evermeet for macOS) into the app-local share dir
# so users don't need a system-wide install.
ffmpeg-sidecar = "2.5"

# Embed the apps/web-ui SPA into the daemon binary at compile time so the
# single `audetic` binary serves both the API (/api) and the UI (/).
include_dir = "0.7"
mime_guess = "2.0"

# Clipboard. The `wayland-data-control` feature pulls Wayland-only deps;
# gate it to Linux so the workspace builds on macOS.
[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3.3", features = ["wayland-data-control"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = "3.3"

# macOS Microphone TCC permission. AVFoundation's AVCaptureDevice is the only
# way to preflight/request mic access without actually opening a stream, so we
# mirror the Screen Recording grant-watcher (CoreGraphics, linked directly in
# audio/system_source/permissions.rs) for the mic. objc2/block2/objc2-foundation
# are already in the tree transitively via cpal's CoreAudio backend.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"
objc2-av-foundation = { version = "0.3", features = [
    "AVCaptureDevice",
    "AVMediaFormat",
    "block2",
] }
