[package]
name = "audetic"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "audeticd"
path = "src/main.rs"

[features]
# Opt-in Vulkan acceleration for Whisper on Linux (e.g. `vulkan-intel` or a
# discrete GPU). Off by default — the stock Linux build is CPU-only, which is
# the right call for integrated graphics where Parakeet on CPU already wins.
vulkan = ["transcribe-rs/whisper-vulkan"]

[dependencies]
# Shared, daemon-independent building blocks (config, URLs, jobs client,
# ffmpeg, clipboard). `schema` adds the utoipa derives the API surface needs.
audetic-core = { path = "../audetic-core", features = ["schema"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Async trait support
async-trait = "0.1"

# Audio recording
cpal = "0.17"
hound = "3.5"

# Sample-rate conversion (macOS loopback delivers samples at the output
# device's native rate, typically 48 kHz; the VTT pipeline wants 16 kHz).
rubato = "0.16"

# On-device transcription engine. `onnx` pulls ONNX Runtime (Parakeet — the
# CPU-fast default) and `whisper-cpp` pulls whisper.cpp (Whisper — accuracy
# option). GPU backends are opt-in: `whisper-metal` is enabled on macOS below;
# Linux stays CPU by default with the workspace `vulkan` feature available for
# users with a capable GPU. ONNX/Parakeet always runs on CPU.
transcribe-rs = { version = "0.3.8", default-features = false, features = ["onnx", "whisper-cpp"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Encoding
base64 = "0.22.1"

# Logging and errors
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI args
clap = { version = "4.4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# Path handling
dirs = "5.0"

# Process management
which = "6.0"

# Text processing
regex = "1.10"

# HTTP server. `multipart` enables the file-upload extractor used by
# `POST /api/meetings/import`.
axum = { version = "0.7", features = ["multipart"] }
# `util` provides `ServiceExt::oneshot`, used to drive `ServeFile` from the
# meeting-audio handler. 0.5 unifies with the tower that tower-http pulls in.
tower = { version = "0.5", features = ["util"] }
# `fs` provides `ServeFile`, used to stream meeting audio (with HTTP Range
# support so the browser <audio> element can seek) from
# `GET /api/meetings/:id/audio`.
tower-http = { version = "0.5", features = ["cors", "fs"] }

# OpenAPI spec generation
utoipa = { version = "5.4", features = ["axum_extras"] }

# HTTP client for OpenAI API
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"] }
semver = "1.0"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
walkdir = "2.5"
fs2 = "0.4"
rusqlite = "0.37.0"
chrono = "0.4"
uuid = { version = "1.18.1", features = ["v4"] }

# Progress indicators
indicatif = "0.17"

# Temp file handling
tempfile = "3"

# Bundled FFmpeg installer — downloads platform-specific static builds
# (BtbN for Linux/Windows, evermeet for macOS) into the app-local share dir
# so users don't need a system-wide install.
ffmpeg-sidecar = "2.5"

# Embed the apps/web-ui SPA into the daemon binary at compile time so the
# single `audetic` binary serves both the API (/api) and the UI (/).
include_dir = "0.7"
mime_guess = "2.0"

# Clipboard. The `wayland-data-control` feature pulls Wayland-only deps;
# gate it to Linux so the workspace builds on macOS.
[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3.3", features = ["wayland-data-control"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = "3.3"

# macOS Microphone TCC permission. AVFoundation's AVCaptureDevice is the only
# way to preflight/request mic access without actually opening a stream, so we
# mirror the Screen Recording grant-watcher (CoreGraphics, linked directly in
# audio/system_source/permissions.rs) for the mic. objc2/block2/objc2-foundation
# are already in the tree transitively via cpal's CoreAudio backend.
[target.'cfg(target_os = "macos")'.dependencies]
# Metal GPU acceleration for Whisper on macOS. Auto-applies to the same
# transcribe-rs dependency declared above (cargo unions target features).
transcribe-rs = { version = "0.3.8", default-features = false, features = ["whisper-metal"] }
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"
objc2-av-foundation = { version = "0.3", features = [
    "AVCaptureDevice",
    "AVMediaFormat",
    "block2",
] }
